# dethrace

./: .gitignore  .gitmodules  CMakeLists.txt
.github/scripts/: build-linux.sh  build-macos.sh
.github/workflows/: workflow.yaml
cmake/: FindSDL2.cmake
docs/: PORTING.md
lib/libsmacker/: CMakeLists.txt
lib/miniaudio/: CMakeLists.txt
lib/physfs/: CMakeLists.txt
ports/android/: settings.gradle
ports/android/app/: build.gradle
ports/android/app/src/main/: AndroidManifest.xml
ports/android/app/src/main/cpp/: CMakeLists.txt
ports/android/app/src/main/java/dethrace_labs/dethrace/: MainActivity.java
ports/android/app/src/main/res/drawable/: ic_dr.xml  ic_launcher_foreground.xml
ports/android/app/src/main/res/values/: strings.xml
ports/android/gradle/app/src/main/cpp/: CMakeLists.txt
ports/android/gradle/app/src/main/java/dethrace_labs/dethrace/: MainActivity.java
src/BRSRC13/CORE/FW/: brlists.c  brprintf.c  datafile.c  fwsetup.c  resource.c  resreg.c
src/BRSRC13/CORE/HOST/: memmgmt.c
src/BRSRC13/CORE/MATH/: fixed.c
src/BRSRC13/CORE/PIXELMAP/: pmsetup.c
src/BRSRC13/CORE/STD/: brstddiag.c  brstdfile.c  brstdlib.c  logwrite.c
src/BRSRC13/CORE/V1DB/: actsupt.c  dbsetup.c
src/BRSRC13/include/brender/: br_defs.h
src/DETHRACE/: CMakeLists.txt  dr_types.h  macros.h  main.c
src/DETHRACE/common/: brucetrk.c  brucetrk.h  car.c  car.h  controls.c  crush.c  crush.h  cutscene.c  demo.c  drfile.c  drfile.h  drmem.c  drmem.h  errors.c  flicplay.c  globvars.c  globvars.h  grafdata.c  grafdata.h  graphics.c  graphics.h  input.c  loading.c  loading.h  loadsave.c  main.c  mainloop.c  opponent.c  opponent.h  options.c  pedestrn.c  pedestrn.h  powerup.c  pratcam.c  racestrt.c  replay.c  sound.c  spark.c  spark.h  structur.c  (+4 more)
src/DETHRACE/pc-all/: allsys.c
src/DETHRACE/pc-dos/: dosnet.c  dossys.c
src/DETHRACE/pc-win95/: win95net.c  win95sys.c
src/DETHRACE/pd/: sys.h
src/S3/: 3d.c  CMakeLists.txt  audio.c  audio.h  s3_defs.h  s3cda.c  s3sound.c
src/S3/include/s3/: s3.h
src/harness/: CMakeLists.txt  harness.c  harness.h  harness_imgui.cpp  harness_imgui.h  harness_trace.c
src/harness/audio/: null.c
src/harness/include/harness/: compiler.h  config.h  hooks.h  os.h  stdio_vfs.h  trace.h  vfs.h  win95_polyfill_defs.h  winsock.h
src/harness/io_platforms/: sdl_gl.c
src/harness/os/: android.c  dos.c  emscripten.cpp  linux.c  macos.c  windows.c
src/harness/renderers/gl/: gl_renderer.c  gl_renderer.h  shaders.c
src/harness/renderers/null/: null.c
src/harness/vfs/: realfs.c  realfs.h  stdiofs.c  stdiofs.h  vfs.c  vfs_private.h  zipfs.c  zipfs.h
src/harness/win95/: polyfill.c  winsock.c
test/: CMakeLists.txt  main.c  tests.h
test/BRSRC13/: test_bswap.c  test_datafile.c  test_v1dbfile.c
test/DETHRACE/: test_controls.c  test_loading.c  test_utility.c
test/harness/: test_vfs.c
tools/: loadsave.py
tools/watcom-codegen/: codegen.py  codegen2.py  dumpparser.py  injectorgen.py
tools/watcom-codegen/injectorgen-resources/: CMakeLists.txt  carm95_hooks.cpp  carm95_libc.c  carm95_main.cpp  carm95_s3sound.c  carm95_webserver.cpp  conanfile.py  hook_sources.cmake  hookclient.py  injector.h  injector_hasher.c  injector_main.cpp
tools/watcom-codegen/injectorgen-resources/include/: carm95_hooks.h  carm95_libc.h  carm95_webserver.h
tools/watcom-codegen/injectorgen-resources/tools/: wrap-global-vars.py
