add_library(s3 STATIC)

target_include_directories(s3
    PUBLIC
        include
)

target_link_libraries(s3 PRIVATE brender harness compile_with_werror)

if(MSVC)
    target_compile_definitions(s3 PRIVATE -D_CRT_SECURE_NO_WARNINGS)
    target_compile_options(s3 PRIVATE
        /wd4101
        /wd4996
    )
else()
    if(DOS)
        # FIXME!!!!!!!
        target_link_libraries(s3 PUBLIC "/home/maarten/djgpp/i586-pc-msdosdjgpp/lib/libm.a")
    else()
        target_link_libraries(s3 PUBLIC pthread m)
    endif()
    add_compile_flags_if_supported(s3
        -Wstrict-prototypes
    )
endif()
if(DETHRACE_FIX_BUGS)
    target_compile_definitions(s3 PRIVATE DETHRACE_FIX_BUGS)
endif()

if(IS_BIGENDIAN)
    target_compile_definitions(s3 PRIVATE BR_ENDIAN_BIG=1)
else()
    target_compile_definitions(s3 PRIVATE BR_ENDIAN_LITTLE=1)
endif()

target_sources(s3 PRIVATE
    3d.c
    3d.h
    s3.c
    s3.h
    ioserv.c
    ioserv.h
    profile.c
    profile.h
    resource.c
    resource.h
    s3cda.c
    s3cda.h
    s3music.c
    s3music.h
    s3sound.c
    s3sound.h
)
